<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main_region"
    android:layout_height="wrap_content"
    android:paddingHorizontal="@dimen/dp_20">

    <androidx.appcompat.widget.AppCompatRadioButton
        android:id="@+id/rb_region"
        style="@style/SP16RegularWhiteTextStyle"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dp_56"
        android:button="@null"
        tools:text="Automatic"
        android:drawableEnd="@drawable/ic_radio_button_unchecked"
        android:background="?android:selectableItemBackground"
        android:layout_gravity="start"
        android:textAlignment="textStart"
        android:textColor="@color/color_medium_black"
        android:textDirection="locale"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>