...
        android:background="@color/color_view_line"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/iv_region" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rv_region"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/view_bottom" />
</androidx.constraintlayout.widget.ConstraintLayout>
