...
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/cl_main_geofence"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/iv_delete_geofence"
        android:layout_width="@dimen/dp_24"
        android:layout_height="@dimen/dp_24"
        android:layout_marginVertical="@dimen/dp_20"
        android:src="@drawable/icon_delete_"
        android:layout_marginEnd="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
...
        android:src="@drawable/ic_geofence_disable"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/tv_geofence_address_type"
        style="@style/SP16RegularWhiteTextStyle"
        android:layout_width="@dimen/dp_0"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:gravity="start"
        android:textDirection="locale"
...
