...
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </com.google.android.material.card.MaterialCardView>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_geofence"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/dp_10"
            app:layout_constrainedHeight="true"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/card_tracker_geofence_simulation"
            tools:listitem="@layout/item_geofence_list" />

        <include
            android:id="@+id/cl_search_loader_geofence_list"
            layout="@layout/bottom_sheet_search_loader"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/dp_16"
            android:visibility="gone"
            android:layout_marginHorizontal="@dimen/dp_16"
...
