...
        android:layout_width="@dimen/dp_0"
        android:layout_height="@dimen/dp_48"
        android:layout_marginHorizontal="@dimen/dp_16"
        android:layout_marginTop="@dimen/dp_32"
        android:layout_marginBottom="@dimen/dp_20"
        android:background="@drawable/sign_in_bg_1"
        android:text="@string/ok"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_cloud_formation_description" />
...
