...
            android:layout_height="@dimen/dp_20"
            android:src="@drawable/ic_radio_button_unchecked" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/ll_imperial"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingHorizontal="@dimen/dp_16"
        app:layout_constraintEnd_toEndOf="parent"
...
