...
                        android:src="@drawable/icon_search"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/edt_search_places"
                        style="@style/SearchText"
                        android:layout_width="@dimen/dp_0"
                        android:layout_height="@dimen/dp_0"
                        android:background="@android:color/transparent"
                        android:ellipsize="end"
                        android:hint="@string/search"
...
