package com.aws.amazonlocation.ui.main

import android.app.ActivityManager
import android.content.Context
import androidx.constraintlayout.widget.ConstraintLayout
import androidx.test.core.app.ApplicationProvider
import androidx.test.espresso.Espresso.onView
import androidx.test.espresso.action.ViewActions
import androidx.test.espresso.action.ViewActions.click
import androidx.test.espresso.assertion.ViewAssertions
import androidx.test.espresso.matcher.ViewMatchers.* // ktlint-disable no-wildcard-imports
import androidx.test.platform.app.InstrumentationRegistry.getInstrumentation
import androidx.test.uiautomator.By
import androidx.test.uiautomator.UiDevice
import androidx.test.uiautomator.Until
import com.aws.amazonlocation.* // ktlint-disable no-wildcard-imports
import com.aws.amazonlocation.di.AppModule
import com.aws.amazonlocation.utils.EventType
import com.aws.amazonlocation.utils.KEY_MAP_NAME
import com.aws.amazonlocation.utils.KEY_MAP_STYLE_NAME
import com.aws.amazonlocation.utils.PreferenceManager
import com.google.android.material.bottomsheet.BottomSheetBehavior
import dagger.hilt.android.testing.HiltAndroidTest
import dagger.hilt.android.testing.UninstallModules
import org.hamcrest.core.AllOf.allOf
import org.junit.*

// ktlint-disable no-wildcard-imports

@UninstallModules(AppModule::class)
@HiltAndroidTest
class SettingsFragmentAnalyticsTest : BaseTestMainActivity() {

    private val uiDevice = UiDevice.getInstance(getInstrumentation())

    private lateinit var preferenceManager: PreferenceManager

    @Throws(java.lang.Exception::class)
    override fun before() {
        preferenceManager = PreferenceManager(ApplicationProvider.getApplicationContext())
        preferenceManager.removeValue(KEY_MAP_NAME)
        preferenceManager.removeValue(KEY_MAP_STYLE_NAME)

        super.before()
    }

    @Test
    fun checkContent() {
        try {
            uiDevice.wait(Until.hasObject(By.desc(AMAZON_MAP_READY)), DELAY_15000)
            Thread.sleep(DELAY_2000)
            uiDevice.wait(
                Until.hasObject(By.res("${BuildConfig.APPLICATION_ID}:id/edt_search_places")),
                DELAY_5000
            )
            val edtSearch =
                onView(withId(R.id.edt_search_places)).check(ViewAssertions.matches(isDisplayed()))
            edtSearch.perform(click())
            onView(withId(R.id.edt_search_places)).perform(ViewActions.replaceText(TEST_ADDRESS))
            var snackBarMsg = uiDevice.wait(Until.hasObject(By.text(EventType.PLACE_SEARCH)), DELAY_10000)
            Assert.assertTrue(TEST_FAILED_NO_MESSAGE_FOUND, snackBarMsg)
            edtSearch.perform(ViewActions.closeSoftKeyboard())
            val clSearchSheet =
                mActivityRule.activity.findViewById<ConstraintLayout>(R.id.bottom_sheet_search)
            val mBottomSheetSearchPlaces: BottomSheetBehavior<ConstraintLayout> =
                BottomSheetBehavior.from(clSearchSheet)
            mBottomSheetSearchPlaces.state = BottomSheetBehavior.STATE_COLLAPSED
            uiDevice.wait(Until.hasObject(By.text(mActivityRule.activity.getString(R.string.menu_explore))), DELAY_5000)
            Thread.sleep(DELAY_1000)
            val settingTabText = mActivityRule.activity.getString(R.string.menu_setting)
            onView(
                allOf(
                    withText(settingTabText),
                    isDescendantOfA(withId(R.id.bottom_navigation_main)),
                    isDisplayed()
                )
            ).perform(click())
            snackBarMsg = uiDevice.wait(Until.hasObject(By.text(EventType.SCREEN_OPEN)), DELAY_10000)
            Assert.assertTrue(TEST_FAILED_NO_MESSAGE_FOUND, snackBarMsg)
            goToDataProvider()
            Thread.sleep(DELAY_2000)
            onView(
                allOf(withId(R.id.ll_here), isDisplayed())
            ).perform(click())
            snackBarMsg = uiDevice.wait(Until.hasObject(By.text(EventType.MAP_PROVIDER_CHANGE)), DELAY_10000)
            Assert.assertTrue(TEST_FAILED_NO_MESSAGE_FOUND, snackBarMsg)
            onView(
                allOf(
                    withId(R.id.iv_route_data_provider),
                    isDisplayed()
                )
            ).perform(click())

            onView(
                allOf(
                    withId(R.id.cl_unit_system),
                    isDisplayed()
                )
            ).perform(click())

            Thread.sleep(DELAY_2000)
            onView(
                allOf(
                    withId(R.id.ll_imperial),
                    isDisplayed()
                )
            ).perform(click())
            Thread.sleep(DELAY_2000)

            snackBarMsg = uiDevice.wait(Until.hasObject(By.text(EventType.MAP_UNIT_CHANGE)), DELAY_10000)
            Assert.assertTrue(TEST_FAILED_NO_MESSAGE_FOUND, snackBarMsg)
        } catch (e: Exception) {
            failTest(95, e)
            Assert.fail(TEST_FAILED)
        }
    }

    private fun goToDataProvider() {
        onView(
            allOf(
                withId(R.id.cl_data_provider),
                isDisplayed()
            )
        ).perform(click())
    }

    override fun after() {
        super.after()
        val targetContext = ApplicationProvider.getApplicationContext<Context>()
        val packageName = targetContext.packageName
        // Clear app from recent apps list
        val am = targetContext.getSystemService(Context.ACTIVITY_SERVICE) as ActivityManager
        am.let {
            it.appTasks.forEach { task ->
                if (task.taskInfo.baseActivity?.packageName == packageName) {
                    task.finishAndRemoveTask()
                }
            }
        }
    }
}
